Добавлены новые локализованные строки для импорта медиафайлов и обновлены страницы для использования локализованных текстов. Реализован диалог выбора типа медиафайла при импорте, улучшена обработка сообщений об ошибках и уведомлений. Обновлены компоненты интерфейса для поддержки новых функций.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -36,5 +36,26 @@
     "photoSaveDescription": "Allow access to save decrypted files to your gallery.",
     "cameraAccessDescription": "For importing photos and videos directly from the camera.",
     "microphoneAccessDescription": "Required for recording videos with sound.",
-    "faceIDDescription": "To protect your encrypted content with biometric authentication."
+    "faceIDDescription": "To protect your encrypted content with biometric authentication.",
+    "imageViewTitle": "Image View",
+    "videoViewTitle": "Video View",
+    "sharingNotImplemented": "Sharing feature will be implemented later",
+    "fileDeleted": "File deleted",
+    "deleteConfirmTitle": "Confirmation",
+    "deleteConfirmMessage": "Are you sure you want to delete this file? This action cannot be undone.",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "importingMedia": "Importing media file...",
+    "mediaImportTitle": "Import Media",
+    "mediaImportMessage": "Select the type of file you want to import",
+    "photoOption": "Photo",
+    "videoOption": "Video",
+    "anyMediaOption": "Any media",
+    "photoImportSuccess": "Photo successfully imported and encrypted",
+    "videoImportSuccess": "Video successfully imported and encrypted",
+    "mediaImportSuccess": "Media file successfully imported and encrypted",
+    "importError": "Import error",
+    "noProtectedFiles": "No protected files",
+    "pressToAddMedia": "Press + to add photos or videos",
+    "addMediaTooltip": "Add media file"
 }
