--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -36,5 +36,26 @@
     "photoSaveDescription": "Разрешите доступ для сохранения расшифрованных файлов в вашу галерею.",
     "cameraAccessDescription": "Для импорта фото и видео непосредственно с камеры.",
     "microphoneAccessDescription": "Требуется для записи видео со звуком.",
-    "faceIDDescription": "Для защиты вашего зашифрованного контента с помощью биометрической аутентификации."
+    "faceIDDescription": "Для защиты вашего зашифрованного контента с помощью биометрической аутентификации.",
+    "imageViewTitle": "Просмотр изображения",
+    "videoViewTitle": "Просмотр видео",
+    "sharingNotImplemented": "Функция шаринга будет реализована позже",
+    "fileDeleted": "Файл удален",
+    "deleteConfirmTitle": "Подтверждение",
+    "deleteConfirmMessage": "Вы уверены, что хотите удалить этот файл? Это действие нельзя отменить.",
+    "cancel": "Отмена",
+    "delete": "Удалить",
+    "importingMedia": "Импорт медиафайла...",
+    "mediaImportTitle": "Импорт медиафайла",
+    "mediaImportMessage": "Выберите тип файла, который хотите импортировать",
+    "photoOption": "Фото",
+    "videoOption": "Видео",
+    "anyMediaOption": "Любой медиафайл",
+    "photoImportSuccess": "Фото успешно импортировано и зашифровано",
+    "videoImportSuccess": "Видео успешно импортировано и зашифровано",
+    "mediaImportSuccess": "Медиафайл успешно импортирован и зашифрован",
+    "importError": "Ошибка при импорте",
+    "noProtectedFiles": "Нет защищенных файлов",
+    "pressToAddMedia": "Нажмите + чтобы добавить фото или видео",
+    "addMediaTooltip": "Добавить медиафайл"
 }
